validated 1. Changes to integrate rea; agemts with comss

--- a/Backup.ipynb
+++ b/Backup.ipynb
@@ -30,9 +30,7 @@
     "from enum import Enum\n",
     "\n",
     "from dotenv import load_dotenv; load_dotenv()\n",
-    "from azure.identity import AzureCliCredential\n",
-    "from azure.ai.projects import AIProjectClient\n",
-    "from azure.ai.agents.models import FunctionTool\n",
+    "from azure.identity import AzureCliCredentialfrom azure.ai.agents.models import FunctionTool\n",
     "\n",
     "# Import our GitHub tools\n",
     "from helpers.github_app_tools import resolve_installation_id, installation_token_cached, create_issue\n",
